--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -21,8 +21,8 @@
     
 
     .contact__card {
-        background-color: var(--container-color) ;
-        border: 1px solid rgba(0, 0, 0, 0.1);
+        /* background-color: var(--container-color) ; */
+        border: 2px solid;
         padding: 1rem;
         border-radius: 0.75rem;
         text-align: center;
