--- a/src/App.css
+++ b/src/App.css
@@ -219,4 +219,9 @@ img {
 }
 
 
+.linearBg{
+  background: #2BC0E4;
+  background: -webkit-linear-gradient(to right, #EAECC6, #2BC0E4);
+  background: linear-gradient(to right, #EAECC6, #2BC0E4);
+}
 
