--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,6 +1,6 @@
 .footer {
-    background-color: var(--container-color) ;
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    /* background-color: var(--container-color) ;
+    border-top: 1px solid rgba(0, 0, 0, 0.1); */
 }
     
     .footer__container {
