--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -4,6 +4,8 @@
     top : 0 ;
     left : 0 ;
     z-index : var( --z-fixed ) ;
+    background: #2BC0E4;background: -webkit-linear-gradient(to right, #EAECC6, #2BC0E4);background: linear-gradient(to right, #EAECC6, #2BC0E4);
+    color: black;
 }
 
 .nav {
@@ -78,7 +80,7 @@ box-shadow: 0 -1px 4px rgba(0, 0, 9, 0.15);
          box-shadow: 0 1px 4px rgba( 0 , 0 , 0 , 0.15 ) ;
          border-radius: 1.5rem 1.5rem 0 0;
          transition: .3s;
-
+         opacity: 0.95;
    }
 
    /* Show menu */
