--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -6,7 +6,7 @@
 
 
 .home__content {
-    grid-template-columns: 116px repeat(2, 1fr);
+    grid-template-columns: 30px repeat(2, 1fr);
     padding-top: 5.5rem;
     column-gap: 2rem;
  align-items: center;
@@ -64,20 +64,22 @@
 .home__description {
         max-width: 400px ;
         margin-bottom:var(--mb-3) ;
+        color: black;
 }
 
 
 .home__img {
-background : url(../assets//profile.jpg) ;
+background : url(../assets//profile.jpeg) ;
 background-repeat : no-repeat ;
 background-position : center ;
 background-size : cover ;
-box-shadow : inset 0 0 0 9px rgb(255 255 255 / 30% ) ;
-order : 1 ;
+box-shadow : inset 0 0 0 1px ;
+/* order : 1 ; */
 justify-self : center ;
 width : 300px ;
 height : 300px ;
 animation: profile_animate 8s ease-in-out infinite 1s ;
+border-radius: 100%;
 }
 
 
@@ -98,7 +100,8 @@ animation: profile_animate 8s ease-in-out infinite 1s ;
 
 
 .home__scroll {
-
+display: flex;
+justify-content: flex-end;
    margin-left : 9.25rem ;
 }
 .wheel{
@@ -193,7 +196,7 @@ animation: profile_animate 8s ease-in-out infinite 1s ;
     }
 
     .home__img {
-        box-shadow: inset 0 0 0 6px rgb(255 255 255 / 30%);
+        box-shadow: inset 0 0 0 2px;
         width: 200px;
         height: 200px;
     }
