--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -7,8 +7,8 @@
 }
 
 .skills__content {
-   background-color : var(--container-color) ;
-   border : 1px solid rgba( 0 , 0 , 0 , 0.1) ;
+   /* background-color : var(--container-color) ; */
+   border : 2px solid;
    padding : 2rem 4rem ;
    border-radius : 1.25rem ;
    width: 900px;
