--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -69,11 +69,12 @@
 
 
 .home__img {
-background : url(../assets//profile.jpeg) ;
+background : url(../assets//profile.png) ;
 background-repeat : no-repeat ;
 background-position : center ;
 background-size : cover ;
-box-shadow : inset 0 0 0 1px ;
+/* box-shadow : inset 0 0 0 1px ; */
+box-shadow : inset 0 0 0 9px rgb(255 255 255 / 30% ) ;
 /* order : 1 ; */
 justify-self : center ;
 width : 300px ;
@@ -196,7 +197,7 @@ justify-content: flex-end;
     }
 
     .home__img {
-        box-shadow: inset 0 0 0 2px;
+        box-shadow: inset 0 0 0 6px rgb(255 255 255 / 30%);
         width: 200px;
         height: 200px;
     }
