--- a/src/App.css
+++ b/src/App.css
@@ -218,10 +218,29 @@ img {
   }
 }
 
-
+/* 
 .linearBg{
   background: #2BC0E4;
   background: -webkit-linear-gradient(to right, #EAECC6, #2BC0E4);
   background: linear-gradient(to right, #EAECC6, #2BC0E4);
+} */
+
+body {
+	background: linear-gradient(-45deg, #EAECC6, #2BC0E4);
+	background-size: 400% 400%;
+	animation: gradient 10s ease infinite;
 }
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
 
